fixed webkit scrollbars

--- a/style.css
+++ b/style.css
@@ -67,11 +67,11 @@ ORDER FOR PROPERTIES
   --topnav-hover:#ffc773;
   --sitelinkbutton-default:#f3a039;
   --sitelinkbutton-hover:#ffbe6d;
-  --sitelinkbutton-bdr:#b9731e;
+  --sitelinkbutton-bdr:#ac6c1d;
   --link-default:#ffb676;
-  --link-visited:#fcb271;
   --link-hover:#ffd0a7;
   --link-active:#ebc5a4;
+  --scrollbar-hover:#fcb271;
   --footer-bg:#cd7f1d;
   --background:linear-gradient(135deg, #271b61, #3c2e84);
 }
@@ -386,7 +386,7 @@ span > hr {
 
 /* used for link colors */
 a:link {color: var(--link-default);}
-a:visited {color: var(--link-visited);}
+a:visited {color: var(--link-default);}
 a:hover {color: var(--link-hover);}
 a:active {color: var(--link-active);}
 
@@ -466,13 +466,15 @@ select {
 /* scrollbar customization! it works now!! */
 ::-webkit-scrollbar {width: 16px;}
 ::-webkit-scrollbar-track {background: var(--sitelinkbutton-bdr);}
-::-webkit-scrollbar-thumb {background: var(--link-default);background-clip: content-box;border-radius: 10px;border: 3px solid transparent;}
-::-webkit-scrollbar-thumb:hover {background: var(--link-hover);background-clip: content-box;}
+::-webkit-scrollbar-thumb {background: var(--sitelinkbutton-hover);background-clip: content-box;border-radius: 10px;border: 3px solid transparent;}
+::-webkit-scrollbar-thumb:hover {background: var(--scrollbar-hover);background-clip: content-box;}
 
 /* firefox scrollbar customization */
-* {
-  scrollbar-width: auto;
-  scrollbar-color: var(--link-default) var(--sitelinkbutton-bdr);
+@-moz-document url-prefix() {
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: var(--link-default) var(--sitelinkbutton-bdr);
+  }
 }
 
 /* lastfm now playing stuffs */
